# whisper.cpp.py

./: .gitignore  .gitmodules  LICENSE  README.md  setup.py  whisper_cpp_py.pxd  whisper_cpp_py.pyx
examples/: example.py
whisper.cpp.cython/: README.md  setup.py  whisper_cpp_py.pxd  whisper_cpp_py.pyx
whisper.cpp.cython/examples/: example.py  example2.py
whisper_cpp_cdll/: README.md  poetry.toml  pyproject.toml
whisper_cpp_cdll/whisper_cpp_cdll/: core.py  types.py  util.py
