[tool.poetry]
name = "whisper_cpp_cdll"
version = "0.0.5"
description = "toolkit for whisper.cpp"
authors = ["limdongjin <geniuslim27@gmail.com>"]
readme = "README.md"
keywords = ["whisper", "whisper.cpp", "speech-recognition", "ASR"]
license = "MIT"
homepage = "https://github.com/limdongjin/whisper.cpp.py"
repository = "https://github.com/limdongjin/whisper.cpp.py"
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
